xfsprogs-2.4.4 (30 March 2003)
	- Correct display of imaxpct in mkfs.xfs output.
	- Portability changes; including some code to support use
	  of several tools on Mac OS X (for Russell), ditto for
	  FreeBSD (from Russell); also did a simplistic backport
	  to IRIX (for me), so that I can run purify on some of
	  the tools.
	- See doc/INSTALL for more details on this.
	- Sync up user/kernel source in libxfs and headers.
	- Fix up some warnings when compiling libxfs on big endian
	  platforms.
	- Fix a configure.in botch which resulted in libreadline
	  always being used even when it was not asked for.
	- Fixed the configure.in script so that if gettext disabled,
	  we don't check for the gettext tools (and no longer fails
	  if they were not found).
	- Added the ability to specify a different user and/or group
	  to install as (previously, and still by default, root/root
	  were always used here).

xfsprogs-2.4.3 (27 March 2003)
	- Cleanups to the build process, in particular the automatic
	  rpm package generation Makefile and spec file template.
	- Makepkgs script can now propagate failures back from make.
	- Minor configure.in update to deal with readline libraries
	  which have not been linked correctly.

xfsprogs-2.4.2 (25 March 2003)
	- Added the xfs_io(8) command, an xfs_db(8) alike command
	  for testing and debugging the XFS file IO path.
	- Added an optional dependency on the GNU readline library
	  which is "off" by default and enabled with the configure
	  option --enable-readline=yes; it affects the interactive
	  tools only (xfs_db and now xfs_io).
	- Implemented xfs_bmap(8) as a shell script wrapper.
	- Documented the mkfs.xfs -f, -llogdev and -rrtdev options.
	- Corrected size check for realtime summary inode (not the
	  same as the realtime bitmap inode) in xfs_repair.

xfsprogs-2.4.1 (18 March 2003)
	- Fix error reporting when zeroing parts of the realtime
	  device in phase6 of xfs_repair.
	- Add a mkfs.xfs check for Mac partitions before writing