@@ -3,5 +3,5 @@
 #
 PKG_MAJOR=2
 PKG_MINOR=4
-PKG_REVISION=4
+PKG_REVISION=5
 PKG_BUILD=0
